--- a/tmux-master.conf
+++ b/tmux-master.conf
@@ -1,3 +1,40 @@
+bind C-a send-prefix
+set -g status-justify centre
+
+setw -g monitor-activity on
+set -g visual-activity on
+
+set -s escape-time 1
+
+set -g base-index 1
+setw -g pane-base-index 1
+
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+bind | split-window -h
+bind - split-window -v
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+set -g status-fg white
+set -g status-bg black
+
+set -g pane-border-fg green
+set -g pane-border-bg black
+set -g pane-active-border-fg white
+set -g pane-active-border-bg yellow
+
+set -g default-terminal "screen-256color"
+
 # Use C-a instead of C-b
 set -g prefix C-a
 unbind C-b
@@ -140,6 +177,4 @@ set -g pane-active-border-fg colour39
 set -g message-fg colour16
 set -g message-bg colour221
 set -g message-attr bold
-set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(whoami) #[fg=colour238,bg=colour234,nobold]⮀'
-set -g window-status-format "#[fg=white,bg=colour234] #I #W "
-set -g window-status-current-format "#[fg=colour234,bg=colour39]⮀#[fg=colour25,bg=colour39,noreverse,bold] #I ⮁ #W #[fg=colour39,bg=colour234,nobold]⮀"
+set -g status-left "#[fg=green]Session:#S #[fg=yellow]#I #[fg=cyan]#P"
