--- a/.gitmodules
+++ b/.gitmodules
@@ -10,10 +10,6 @@
 	path = bundle/vim-pathogen
 	url = https://github.com/tpope/vim-pathogen.git
     ignore = untracked
-[submodule "bundle/snipmate.vim"]
-	path = bundle/snipmate.vim
-	url = https://github.com/weierophinney/snipmate.vim.git
-    ignore = untracked
 [submodule "bundle/tlib_vim"]
 	path = bundle/tlib_vim
 	url = https://github.com/tomtom/tlib_vim.git
@@ -38,3 +34,6 @@
 	path = bundle/syntastic
 	url = https://github.com/scrooloose/syntastic.git
     ignore = untracked
+[submodule "bundle/vim-snipmate"]
+	path = bundle/vim-snipmate
+	url = https://github.com/garbas/vim-snipmate.git
