--- a/popiks.conf
+++ b/popiks.conf
@@ -1,7 +1,7 @@
 send-keys -t popiks 'cd /projects/popiks' C-m
 send-keys -t popiks 'vim' C-m
-split-window -t popiks -h -p 40
-send-keys -t popiks:1.2 'cd /projects/popiks/tests' C-m
+split-window -t popiks -h -p 30
+send-keys -t popiks:1.2 'cd /projects/popiks/test' C-m
 new-window -t popiks:2 -n console
 send-keys -t popiks:2 'cd /projects/popiks' C-m
 select-window -t popiks:1
